--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
-    background: #333;
+    background: rgb(71, 66, 66);
     overflow: hiden;
 }
 
 .landing {
     position: relative;
-    background-image: url('../img/emea-1920.png');
+    background-image: url('../img/emea-1024.png');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -26,7 +26,7 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
-    background: rgba(0, 0, 0, 0.6)
+    background: rgba(0, 0, 0, 0.5)
 }
 
 .landing h1 {
@@ -56,7 +56,7 @@ body {
 }
 
 .countdown div:first-child {
-    background: #17a2b8;
+    background: #000;
 }
 
 .countdown span {
@@ -64,9 +64,12 @@ body {
     font-size: 10px;
 }
 
-@media(max-width: 400px) {
+@media(max-width: 700px) {
+    .landing {
+        height: 76vh;
+    }
     .landing img {
-        width: 20%;
+        width: 50%;
     }
     .landing h1 {
         font-size: 20px;
